[package]
name = "gpt2_from_scratch_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
dotenv = "0.15.0"
ndarray = "0.15.6"
rand = "0.8.4"
rand_chacha = "0.3.1"

